# AkazaRBWeb

./: .gitignore  .replit  README.md  pyproject.toml  workbox-config.js
app/: app.py  config.py
app/static/css/: main.css
app/static/js/: team.js
app/templates/: 404.html  commands.html  index.html  license.html  profile.html  team.html
src/: app.py  sw.js  sw.js.map
src/static/: manifest.json
src/static/js/: license.js  script.js
src/static/js/service/: sw.js
src/templates/: index.html
