[tool.poetry]
name = "akazadbotweb"
version = "0.7.1"
description = "El mejor Bot para Discord."
authors = ["K1ngDev-Server <j.armando140208g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
Flask-WTF = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
